ModelRestController.java user class